--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>記錄位置</title>
+    <title>LINE 打卡系統</title>
     <script>
         function isLineBrowser() {
             return /Line/i.test(navigator.userAgent);
@@ -65,8 +65,7 @@
     </script>
 </head>
 <body>
-    <h1>LINE 打卡系統</h1>
-    <a href="#" onclick="sendLocation()"><h2>點擊打卡</h2></a>
+    <a href="#" onclick="sendLocation()"><h1>點擊打卡</h1></a>
     <p id="status"></p>
     
     <!-- 新增換電話按鈕 -->
