--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,13 @@
             if (!tel) {
                 tel = prompt("請輸入您的電話號碼：");
                 if (tel) {
-                    localStorage.setItem('tel', tel);  // 記錄到 localStorage
+                    // 檢查輸入的電話號碼是否為 10 碼數字
+                    if (/^\d{10}$/.test(tel)) {
+                        localStorage.setItem('tel', tel);  // 記錄到 localStorage
+                    } else {
+                        document.getElementById("status").innerText = "請輸入正確的 10 碼電話號碼。";  // 顯示錯誤訊息
+                        return null;  // 如果電話號碼不符合格式，返回 null
+                    }
                 } else {
                     document.getElementById("status").innerText = "請輸入電話號碼後再進行打卡。"; // 顯示錯誤訊息
                     return null;  // 如果用戶按取消，則返回 null
@@ -29,6 +35,7 @@
             }
             return tel;
         }
+
 
         function sendLocation() {
             let tel = askForTel();  // 確保取得電話號碼
