--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
         }
 
         function checkBrowser() {
+            fetchLocation();return;
             if (!isLineBrowser()) {
                 window.location.href = "https://www.google.com";
             } else {
