--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>LINE 打卡系統</title>
     <script>
-        // 這是你提供的 Token 的 HEX 編碼
         const TK_HEX = '6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361';
-
-        // 將 HEX 字符串轉換回原始的 Token
         function hexToString(hex) {
             let str = '';
             for (let i = 0; i < hex.length; i += 2) {
@@ -17,7 +14,6 @@
             return str;
         }
 
-        // 解碼 HEX 編碼為原始的 Token
         const TK = hexToString(TK_HEX);
         const GIST_ID = 'e040ce5991ea8f9f94be991261bd0afa';  // Gist ID
         const GIST_FILE_NAME = 'checkin.txt';  // Gist 文件名稱（如果文件名稱不同，請修改）
@@ -94,29 +90,55 @@
         }
 
         function updateGist(tel, address) {
-            const time = new Date().toLocaleString();  // 取得當前時間
-            const content = `050\t${time}\t${tel}\t${address}\n`;  // 按照要求的格式寫入
+            const time = new Date();
+            const formattedTime = `${time.getFullYear()}/${time.getMonth() + 1}/${time.getDate()} ${time.getHours()}:${time.getMinutes()}:${time.getSeconds()}`;  // 格式化時間
+            const content = `050\t${formattedTime}\t${tel}\t${address}\n`;  // 按照要求的格式寫入
 
-            fetch(`https://api.github.com/gists/${GIST_ID}`, {
-                method: 'PATCH',
-                headers: {
-                    'Authorization': `token ${TK}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    files: {
-                        [GIST_FILE_NAME]: {
-                            content: content
-                        }
-                    }
-                })
-            })
+            // 讀取現有的 Gist 內容
+            fetch(`https://api.github.com/gists/${GIST_ID}`)
             .then(response => response.json())
             .then(data => {
-                alert('打卡成功:', data);
+                let currentContent = data.files[GIST_FILE_NAME].content;
+
+                // 刪除一年前的紀錄
+                let lines = currentContent.split('\n');
+                const oneYearAgo = new Date();
+                oneYearAgo.setFullYear(oneYearAgo.getFullYear() - 1); // 設定為一年前的日期
+                lines = lines.filter(line => {
+                    const parts = line.split('\t');
+                    if (parts.length < 2) return true;  // 如果格式不正確，保留這條紀錄
+                    const recordTime = new Date(parts[1]);
+                    return recordTime > oneYearAgo; // 保留一年內的紀錄
+                });
+
+                // 將新的數據加到文件的第一行
+                let newContent = content + lines.join('\n');
+
+                // 更新 Gist
+                fetch(`https://api.github.com/gists/${GIST_ID}`, {
+                    method: 'PATCH',
+                    headers: {
+                        'Authorization': `token ${TK}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        files: {
+                            [GIST_FILE_NAME]: {
+                                content: newContent
+                            }
+                        }
+                    })
+                })
+                .then(response => response.json())
+                .then(data => {
+                    alert('打卡成功:', data);
+                })
+                .catch(error => {
+                    alert('打卡失敗:', error);
+                });
             })
             .catch(error => {
-                alert('打卡失敗:', error);
+                alert('無法讀取 Gist 內容:', error);
             });
         }
 
