--- a/excuse.htm
+++ b/excuse.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>請假系統</title>
+    <title>Amber請假系統</title>
     <script>
         const TK_HEX = '6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361';
         function hexToString(hex) {
@@ -14,7 +14,7 @@
             return str;
         }
         const TK = hexToString(TK_HEX);
-        const GIST_ID = 'e040ce5991ea8f9f94be991261bd0afa';
+        const GIST_ID = '2385af75e322ffc9d58c986af8f198b9';
         const GIST_FILE_NAME = 'excuse.txt';
 
         function askForTel() {
