--- a/excuse.htm
+++ b/excuse.htm
@@ -56,7 +56,7 @@
             });
         }
         function submitLeave() {
-			let button = document.getElementById("submitButton");
+	    let button = document.getElementById("submitButton");
             button.disabled = true; // 送出後按鈕反灰
             button.innerText = "申請中...";
 			
@@ -125,7 +125,7 @@
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
                 body: new URLSearchParams({
-                    to: 'eason@amberco.com.tw',
+                    to: 'tokimusic@gmail.com',
                     subject: '假單送簽',
                     msg: msg
                 })
