--- a/excusepermit.htm
+++ b/excusepermit.htm
@@ -48,6 +48,8 @@
                         
                         let actionCell = document.createElement("td");
                         actionCell.appendChild(approveBtn);
+                        actionCell.appendChild(document.createElement("br"));
+                        actionCell.appendChild(document.createElement("br"));
                         actionCell.appendChild(rejectBtn);
                         row.appendChild(actionCell);
                     }
