--- a/excuse.htm
+++ b/excuse.htm
@@ -126,7 +126,7 @@
                 },
                 body: new URLSearchParams({
                     to: 'tokimusic@gmail.com',
-                    subject: '假單送簽',
+                    subject: '${name} ${startTime} 假單送簽',
                     msg: msg
                 })
             }).then(() => {
