--- a/excuse.htm
+++ b/excuse.htm
@@ -125,7 +125,7 @@
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
                 body: new URLSearchParams({
-                    to: 'tokimusic@gmail.com',
+                    to: 'eason@amberco.com.tw',
                     subject: `${name} ${startTime} 假單送簽`,
                     msg: msg
                 })
