--- a/excuse.htm
+++ b/excuse.htm
@@ -92,7 +92,7 @@
             let formData = new FormData();
             formData.append("_format", "html");
             formData.append("_subject", `${name} ${startTime} 假單送簽`);
-            formData.append("_replyto", "tokimusic@gmail.com");
+            formData.append("_replyto", "eason@amberco.com.tw");
             formData.append("_captcha", "false");
             formData.append("message", msg);
         
@@ -109,30 +109,6 @@
             })
             .catch(error => {
                 document.getElementById("status").innerHTML = "❌ 發送錯誤：" + error.message;
-            });
-        }
-
-        function notifyLeavephp(name, startTime, endTime, leaveType, reason, lines) {
-            const reviewLink = `https://ambercoltd.github.io/CheckIn/excusepermit.htm`;
-            const msg = `<b>姓名:</b> ${name}<br><b>假別:</b> ${leaveType}<br><b>原因:</b> ${reason}<br><b>開始:</b> ${startTime}<br><b>結束:</b> ${endTime}<br><br>` +
-                        `<a href='${reviewLink}'>前往審核</a><br><br>最近一個月請假紀錄:<br>` + lines.join('<br>');
-            const url = `https://www.air-rex.com.tw/email.php`;
-
-            fetch(url, {
-                method: 'POST',
-                mode: 'no-cors',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                },
-                body: new URLSearchParams({
-                    to: 'tokimusic@gmail.com',
-                    subject: `${name} ${leaveType} ${startTime} 假單送簽`,
-                    msg: msg
-                })
-            }).then(() => {
-                document.getElementById("status").innerHTML = `請假申請已提交！通知已發送！<br><br>最近一個月請假紀錄:<br>` + lines.join('<br>');
-            }).catch(error => {
-                console.error('Error:', error);
             });
         }
 
