--- a/excuse.htm
+++ b/excuse.htm
@@ -88,7 +88,7 @@
         function notifyLeave(content, name, startTime, endTime, leaveType, reason) {
             const reviewLink = `https://ambercoltd.github.io/CheckIn/excusepermit.htm`;
             const msg = `姓名: ${name}\n假別: ${leaveType}\n原因: ${reason}\n開始: ${startTime}\n結束: ${endTime}\n\n` +
-                        `前往審核:${reviewLink}\n\n最近一個月請假紀錄:\n` + document.getElementById("status").innerHTML.replace("<br>","\n");
+                        `前往審核:${reviewLink}\n\n` + document.getElementById("status").innerHTML.replace("<br>","\n");
         
             // 使用 FormSubmit 發送 Email
             let formData = new FormData();
@@ -97,7 +97,7 @@
             formData.append("_captcha", "false");
             formData.append("message", msg);
         
-            fetch("https://formsubmit.co/tokimusic@gmail.com", {
+            fetch("https://formsubmit.co/eason@amberco.com.tw", {
                 method: "POST",
                 body: formData
             })
