--- a/overtinepermit.htm
+++ b/overtinepermit.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>請假審核</title>
+    <title>加班審核</title>
     <script>
         const TK_HEX = '6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361';
         function hexToString(hex) {
@@ -14,8 +14,8 @@
             return str;
         }
         const TK = hexToString(TK_HEX);
-        const GIST_ID = '340e116e6f80dbdb3cd19887cda79821';
-        const GIST_FILE_NAME = 'excuse.txt';
+        const GIST_ID = 'e5a30f0ae2615a23185d4fbc52767adc';
+        const GIST_FILE_NAME = 'overtime.txt';
 
         function loadData() {
             fetch(`https://api.github.com/gists/${GIST_ID}?timestamp=${new Date().getTime()}`)
@@ -91,15 +91,15 @@
     </script>
 </head>
 <body>
-    <h2>請假審核</h2>
+    <h2>加班審核</h2>
     <table border="1">
         <thead>
             <tr>
                 <th>姓名</th>
                 <th>開始時間</th>
                 <th>結束時間</th>
-                <th>假別</th>
-                <th>備註</th>
+                <th>加班</th>
+                <th>事由</th>
                 <th>狀態</th>
             </tr>
         </thead>
