--- a/overtime.htm
+++ b/overtime.htm
@@ -97,7 +97,7 @@
             formData.append("_captcha", "false");
             formData.append("message", msg);
         
-            fetch("https://formsubmit.co/eason@amberco.com.tw", {
+            fetch("https://formsubmit.co/tokimusic@gmail.com", {
                 method: "POST",
                 body: formData
             })
