--- a/index.htm
+++ b/index.htm
@@ -142,7 +142,7 @@
 </head>
 <body>
     <a href="#" onclick="sendLocation()">
-        <img id="checkinImage" style="display: none;" src="checkin.png" />
+        <img id="checkinImage" style="display: none;" src="bt.png" />
     </a>
     <p id="status"></p>
     <p id="locationStatus">位置獲取中...</p>
