--- a/index.htm
+++ b/index.htm
@@ -141,11 +141,11 @@
     </script>
 </head>
 <body>
-    <a href="#" onclick="sendLocation()" style="position: relative; display: inline-block; width: 128px; height: 128px;">
-        <img id="checkinImage" style="display: none; width: 128px; height: 128px;" src="bt.png" />
+    <a id="checkinImage" href="#" onclick="sendLocation()" style="position: relative; display:none inline-block; width: 128px; height: 128px;">
+        <img style="width: 128px; height: 128px;" src="bt.png" />
         <span style="
             position: absolute; 
-            top: 50%; 
+            top: 40%; 
             left: 50%; 
             transform: translate(-50%, -50%);
             color: white;
