--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
 
         async function updateGist(tel, address) {
             const now = new Date();
-            const formattedTime = now.toLocaleString('zh-TW');
+            const formattedTime = `${now.getFullYear()}/${(now.getMonth()+1).toString().padStart(2,'0')}/${now.getDate().toString().padStart(2,'0')} ${now.getHours().toString().padStart(2,'0')}:${now.getMinutes().toString().padStart(2,'0')}:${now.getSeconds().toString().padStart(2,'0')}`;
             const newContent = `050\t${formattedTime}\t${tel}\t${address}\r\n`;
 
             try {
