--- a/overtime.htm
+++ b/overtime.htm
@@ -191,7 +191,7 @@
     </select>
     <br>
     <label>結束日期：</label>
-    <input type="date" id="endDate" readonly>
+    <input type="date" id="endDate" disabled>
     <label>結束時間：</label>
     <select id="endTime">
         <script>
