--- a/index.htm
+++ b/index.htm
@@ -123,7 +123,7 @@
                 });
         
                 document.getElementById("status").innerText = "打卡成功！";
-                document.getElementById("logRecords").innerText = recentRecords.join('\n'); // 只顯示最近 1 個月的記錄
+                document.getElementById("logRecords").innerText = newContent + recentRecords.join('\n'); // 只顯示最近 1 個月的記錄
             } catch (error) {
                 alert("打卡失敗：" + error);
             }
