--- a/index.htm
+++ b/index.htm
@@ -105,7 +105,7 @@
                 let updatedLines = lines.filter(line => {
                     const parts = line.split('\t');
                     return parts.length > 1 && Date.parse(parts[1]) > Date.now() - 15552000000;
-                });
+                }).map(line => line.trim()); // 在這裡對每一行做 trim()
         
                 // 過濾出最近 1 個月內相同 tel 的紀錄（顯示在 logRecords）
                 let recentRecords = updatedLines.filter(line => {
